# samuelmaia-data-analyst

./: Makefile  README.md  README.pt-BR.md  README.pt-PT.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
app/ui/: components.py
assets/styles/: premium.css
config/: data_governance.json  settings.py
core/: governance_policy.py  privacy_governance.py  runtime_config.py
docs/: architecture.md  genai_analytics.md  governance_lgpd.md  quickstart.md
pages/: 01_Executive_Overview.py  02_Governance_And_Quality.py  03_Semantic_Metrics.py  04_Repository_Intelligence.py  05_GenAI_Analytics_Assistant.py  06_Change_Drivers.py
tests/: test_api_surface.py  test_governance_policy.py  test_runtime_config.py
